Send test bytes over serial port

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 # This file is generated automatically from metadata
 # File edits may be overwritten!
 [metadata]
-name = loadstar_sensors_interface
-version = 2.1.1
+name = panels_controller_client
+version = 0.1.0
 author = Peter Polidoro
 author_email = peter@polidoro.io
-url = https://github.com/janelia-pypi/loadstar_sensors_interface_python
-description = Python async interface to Loadstar Sensors USB devices.
+url = https://github.com/janelia-pypi/panels_controller_client_python
+description = Python client interface to the Reiser lab PanelsController.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD-3-Clause
@@ -17,10 +17,9 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    pyserial-asyncio
-    pint
+    pyserial
     click
 
 [options.entry_points]
 console_scripts =
-    loadstar = loadstar_sensors_interface.cli:cli
+    panels = panels_controller_client.cli:cli
