panels controller client -> arena host

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 # This file is generated automatically from metadata
 # File edits may be overwritten!
 [metadata]
-name = panels_controller_client
+name = arena_host
 version = 0.1.0
 author = Peter Polidoro
 author_email = peter@polidoro.io
-url = https://github.com/janelia-pypi/panels_controller_client_python
-description = Python client interface to the Reiser lab PanelsController.
+url = https://github.com/janelia-pypi/arena_host_python
+description = Python host interface to the Reiser lab ArenaController.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD-3-Clause
@@ -22,4 +22,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    panels = panels_controller_client.cli:cli
+    arena-host = arena_host.cli:cli
