--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 # This file is generated automatically from metadata
 # File edits may be overwritten!
 [metadata]
-name = arena_host
+name = arena_interface
 version = 0.1.0
 author = Peter Polidoro
 author_email = peter@polidoro.io
-url = https://github.com/janelia-python/arena_host_python
-description = Python host interface to the Reiser lab ArenaController.
+url = https://github.com/janelia-python/arena_interface_python
+description = Python interface to the Reiser lab ArenaController.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD-3-Clause
@@ -17,9 +17,8 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    pyserial
     click
 
 [options.entry_points]
 console_scripts =
-    arena-host = arena_host.cli:cli
+    arena-interface = arena_interface.cli:cli
