--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ packages = find:
 install_requires =
     click
     python3-nmap
+    serial-interface
 
 [options.entry_points]
 console_scripts =
