--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # File edits may be overwritten!
 [metadata]
 name = arena_interface
-version = 0.1.0
+version = 2.0.0
 author = Peter Polidoro
 author_email = peter@polidoro.io
 url = https://github.com/janelia-python/arena_interface_python
@@ -18,6 +18,7 @@ classifiers =
 packages = find:
 install_requires =
     click
+    schedule
 
 [options.entry_points]
 console_scripts =
